new datapipeline to process air quality data + downlaod austria .shape files

--- a/notebooks/process_data.ipynb
+++ b/notebooks/process_data.ipynb
@@ -26,36 +26,47 @@
     }
    ],
    "source": [
+    "# Define paths\n",
+    "DATA_DIR = os.path.abspath(\"../data/parquet_files\")\n",
+    "URLS_CSV = os.path.abspath(\"../data/ParquetFilesUrls.csv\")\n",
+    "\n",
+    "# Ensure directory exists\n",
+    "os.makedirs(DATA_DIR, exist_ok=True)\n",
+    "\n",
     "def download_files():\n",
+    "    \"\"\"Download only missing files from CSV.\"\"\"\n",
     "    \n",
-    "    os.makedirs('../data/parquet_files', exist_ok=True)\n",
-    "    \n",
-    "    data_links = pd.read_csv(\"../data/ParquetFilesUrls.csv\")\n",
-    "    \n",
+    "    # Load URLs from CSV\n",
+    "    data_links = pd.read_csv(URLS_CSV)\n",
     "    \n",
     "    for url in data_links['ParquetFileUrl']:\n",
     "        if pd.isna(url):\n",
     "            continue\n",
     "        \n",
     "        filename = url.split('/')[-1]\n",
+    "        file_path = os.path.join(DATA_DIR, filename)\n",
+    "        \n",
+    "        if os.path.exists(file_path):\n",
+    "            print(f\"File already exists: {filename}, skipping.\")\n",
+    "            continue\n",
     "        \n",
     "        try:\n",
-    "            response = requests.get(url, allow_redirects=True)\n",
+    "            print(f\"Downloading: {filename} ...\")\n",
+    "            response = requests.get(url, stream=True)\n",
     "            response.raise_for_status()\n",
     "            \n",
-    "            file_path = os.path.join('../data/parquet_files', filename)\n",
     "            with open(file_path, 'wb') as file:\n",
-    "                file.write(response.content)\n",
+    "                for chunk in response.iter_content(chunk_size=1024):\n",
+    "                    file.write(chunk)\n",
     "                \n",
     "            print(f\"Downloaded: {filename}\")\n",
     "        \n",
     "        except requests.exceptions.RequestException as e:\n",
     "            print(f\"Failed to download {url}: {e}\")\n",
     "\n",
-    "if os.path.exists('../data/parquet_files'):\n",
-    "    print(\"Files already downloaded\")\n",
-    "else:\n",
-    "    download_files()"
+    "# Run the function\n",
+    "download_files()\n",
+    "print(\"All files checked/downloaded!\")\n"
    ]
   },
   {
@@ -84,7 +95,7 @@
     "    \n",
     "    for file in files:\n",
     "        if file.endswith('.parquet'):\n",
-    "            df = pd.read_parquet(f'../data/parquet_files/{file}')\n",
+    "            df = pd.read_parquet(f'.data/parquet_files/{file}')\n",
     "            data = pd.concat([data, df], ignore_index=True)\n",
     "    \n",
     "    data.to_parquet('../data/merged_air_quality.parquet')\n",
