dockerize data downlaod and processing

--- a/notebooks/process_data.ipynb
+++ b/notebooks/process_data.ipynb
@@ -27,7 +27,7 @@
    ],
    "source": [
     "# Define paths\n",
-    "DATA_DIR = os.path.abspath(\"../data/parquet_files\")\n",
+    "DATA_DIR = os.path.abspath(\"../data/raw/air_quality\")\n",
     "URLS_CSV = os.path.abspath(\"../data/ParquetFilesUrls.csv\")\n",
     "\n",
     "# Ensure directory exists\n",
